parser/tests/bad/for01-2.st
% range of a 'for' statement must have type 'int'
%   increasing, no id, end

for : 1..3.0
  % empty
end for
